--- a/audit/src/config/.env
+++ b/audit/src/config/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=password
-DB_DATABASE=auditdb
-DB_AUDIT_DATABASE=auditdb # The database for the audit service
+DB_DATABASE=medical_research_db
+DB_AUDIT_DATABASE=medical_research_db # The database for the audit service
 RABBITMQ_URL=amqp://localhost  # e.g., amqp://user:pass@host:port
