--- a/frontend/service-manager/package.json
+++ b/frontend/service-manager/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.5",
+    "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
